# MQTT-C

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.zig  fuzzer.c  makefile  testbench.c  testing.todo  tests.c
.github/workflows/: ci-tests.yml  codeql-buildscript.sh
CMakeModules/: FindCMocka.cmake
docs/: annotated.html  bio_publisher_8c-example.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  examples.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  graph_legend.html  group__api.html  group__details.html  group__packers.html  group__pal.html  group__unpackers.html  index.html  menudata.js  modules.html  mqtt_8c.html  mqtt_8h.html  mqtt_8h__dep__incl.md5  mqtt_8h__incl.md5  mqtt_8h_source.html  mqtt__pal_8c.html  mqtt__pal_8c__incl.md5  mqtt__pal_8h.html  mqtt__pal_8h_source.html  openssl_publisher_8c-example.html  reconnect_subscriber_8c-example.html  simple_publisher_8c-example.html  simple_subscriber_8c-example.html  structmqtt__client.html  structmqtt__fixed__header.html  structmqtt__message__queue.html  (+11 more)
docs/html/: annotated.html  classes.html  dir_000000_000001.html  dir_000001_000000.html  dir_000002_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  examples.html  examples_2simple_publisher_8c-example.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  graph_legend.html  group__api.html  group__details.html  group__packers.html  group__pal.html  group__unpackers.html  index.html  modules.html  mqtt_8c.html  mqtt_8c__incl.map  mqtt_8c__incl.md5  mqtt_8h.html  mqtt_8h__dep__incl.map  mqtt_8h__dep__incl.md5  mqtt_8h__incl.map  mqtt_8h__incl.md5  mqtt_8h_source.html  mqtt__client_8h.html  mqtt__client_8h__incl.map  mqtt__client_8h__incl.md5  mqtt__client_8h_source.html  (+30 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  (+34 more)
docs/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d28a4824dc47e487b107a5db32ef43c4.tex  dir_d28a4824dc47e487b107a5db32ef43c4_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  examples.tex  examples_2simple_publisher_8c-example.tex  files.tex  group__api.tex  group__details.tex  group__packers.tex  group__pal.tex  group__unpackers.tex  index.tex  modules.tex  mqtt_8c.tex  mqtt_8c__incl.md5  mqtt_8h.tex  mqtt_8h__dep__incl.md5  mqtt_8h__incl.md5  mqtt__client_8h.tex  mqtt__client_8h__incl.md5  mqtt__pal_8c.tex  mqtt__pal_8c__incl.md5  mqtt__pal_8h.tex  mqtt__pal_8h__dep__incl.md5  refman.tex  simple__publisher_8c.tex  simple__publisher_8c__incl.md5  simple__subscriber_8c.tex  simple__subscriber_8c__incl.md5  simple_publisher-example.tex  simple_publisher_8c-example.tex  simple_subscriber_8c-example.tex  structmqtt__client.tex  structmqtt__fixed__header.tex  structmqtt__message__queue.tex  structmqtt__queued__message.tex  structmqtt__response.tex  structmqtt__response__connack.tex  (+8 more)
examples/: bearssl_publisher.c  bio_publisher.c  bio_publisher_win.c  bio_reconnect_subscriber.c  bluazu.c  mbedtls_publisher.c  openssl_publisher.c  openssl_publisher_win.c  pal_client_ref.c  reconnect_subscriber.c  simple_publisher.c  simple_subscriber.c
examples/templates/: bearssl_sockets.h  bio_sockets.h  bsd_sockets.h  mbedtls_sockets.h  openssl_sockets.h  posix_sockets.h
include/: mqtt.h  mqtt_client.h  mqtt_details.h  mqtt_errors.h  mqtt_fixed_header.h  mqtt_mq.h  mqtt_pal.h  mqtt_requests.h  mqtt_responses.h  mqtt_rules.h  mqtt_types.h  mqttc.h  mqttc_pal.h
old/: mqtt_fixed_header.h  mqtt_packet.c  mqtt_packet.h
src/: mqtt.c  mqtt_client.c  mqtt_connack.c  mqtt_connect.c  mqtt_details.c  mqtt_disconnect.c  mqtt_errors.c  mqtt_fixed_header.c  mqtt_mq.c  mqtt_pal.c  mqtt_ping.c  mqtt_puback.c  mqtt_publish.c  mqtt_pubxxx.c  mqtt_response.c  mqtt_suback.c  mqtt_subscribe.c  mqtt_unsuback.c  mqtt_unsubscribe.c  mqtt_variable_header.c  mqttc.c  mqttc_pal.c
